--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,10 @@
 *{
 	font-family: verdana;
 }
-
+h1{
+	text-align: center;
+	width: 100%;
+}
 body{
 	background-color: #BDC3C7;
 	text-align: right;
@@ -59,10 +62,10 @@ form > input{
 	padding: 2px;
 }
 
-form > input:nth-child(2), form > input:nth-child(3){
+form > input:nth-child(1), form > input:nth-child(2){
 	border-radius: 0 0 15px 0;
 }
-.pwwrapper > input, form > input:nth-child(5){
+.pwwrapper > input, form > input:nth-child(4){
 	border-radius:15px 0 0 0;
 }
 input{
